Continue work on design codec