@@ -58,6 +58,14 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>14</source>
+					<target>14</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<!-- Version comes from parent -->
 				<configuration>
@@ -66,7 +74,6 @@
 						--add-opens=com.avereon.cartesia/com.avereon.cartesia=ALL-UNNAMED
 						--add-opens=com.avereon.cartesia/com.avereon.cartesia.cursor=ALL-UNNAMED
 						--add-opens=com.avereon.cartesia/com.avereon.cartesia.data=ALL-UNNAMED
-						--add-opens=com.avereon.cartesia/com.avereon.cartesia.geometry=ALL-UNNAMED
 						--add-opens=com.avereon.cartesia/com.avereon.cartesia.icon=ALL-UNNAMED
 						--add-opens=com.avereon.cartesia/com.avereon.cartesia.tool=ALL-UNNAMED
 					</argLine>
